# solfire

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
env/: .env.example
src/: database.rs  json_rpc_client.rs  main.rs  solana_rpc_client.rs
src/application/: api.rs  dtos.rs  mod.rs
src/common/: env_var.rs  inject.rs  mod.rs
src/infrastructure/: database.rs  mod.rs  solana_rpc_client.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/migrations/2024-02-05-050301_create_wallet_events/: down.sql  up.sql
src/infrastructure/solana_rpc_client/: mod.rs
src/presentation/: json_presenter.rs  mod.rs  presenter.rs
static/: ping.html
static/css/: ping.css
static/html/: ping.html
