[package]
name = "solfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { features = ["full"], version = "1" }
solana-program = "*"
solana-client = "*"
solana-sdk = "*"
dotenv = "*"