[package]
name = "solfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { features = ["full"], version = "1" }
solana-program = "*"
solana-client = "*"
solana-sdk = "*"
actix-web = "*"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"